# 3D-Telepresence-Reconstruction

./: AlignColorMap.cpp  AlignColorMap.cu  AlignColorMap.h  BilateralFilter.cu  CMakeLists.txt  Calibration.cpp  Calibration.h  ColorFilter.cpp  ColorFilter.cu  ColorFilter.h  Configuration.cpp  Configuration.h  CudaHandleError.h  DenseCloudNeighbor.cu  DepthFilter.cpp  DepthFilter.cu  DepthFilter.h  GpuDrawCloud.cu  GpuDrawCloud.h  Kinect2Grabber.cpp  Kinect2Grabber.h  Kinect2Pcd.cpp  Kinect2Pcd.h  Parameters.h  PointCloudProcess.cpp  PointCloudProcess.h  RealsenseGrabber.cpp  RealsenseGrabber.h  Recognition.cpp  Recognition.h  SceneRegistration.cpp  SceneRegistration.h  TcpSocket.cpp  TcpSocket.h  Timer.cpp  Timer.h  Transmission.cpp  Transmission.h  TsdfVolume.cpp  TsdfVolume.cu  (+9 more)
include/: AlignColorMap.h  Calibration.h  ColorFilter.h  Configuration.h  CudaHandleError.h  DepthFilter.h  Parameters.h  RealsenseGrabber.h  TeleCP.h  Timer.h  Transmission.h  TsdfVolume.cuh  TsdfVolume.h
src/: AlignColorMap.cpp  Calibration.cpp  Configuration.cpp  DepthFilter.cpp  RealsenseGrabber.cpp  TeleCP.cpp  Transmission.cpp  TsdfVolume.cpp
src/cuda/: AlignColorMap.cu  ColorFilter.cu  DepthFilter.cu  TsdfVolume.cu
tests/: calibration_exe.cpp  main.cpp  telepresence_dll.cpp
